<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="bindPhoneViewModel"
            type="com.zf.weisport.ui.viewmodel.BindPhoneViewModel"/>
    </data>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@drawable/shape_username"
        android:drawableLeft="@mipmap/ic_et_username"
        android:drawablePadding="8dp"
        android:hint="@string/et_hint_username"
        android:inputType="phone"
        android:lines="1"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:text="@={bindPhoneViewModel.phone}"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@drawable/shape_username">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_marginTop="-1dp"
            android:layout_weight="1"
            android:background="@null"
            android:drawablePadding="8dp"
            android:hint="@string/et_hint_verify"
            android:inputType="number"
            android:lines="1"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:text="@={bindPhoneViewModel.smsCode}"/><!--android:drawableLeft="@mipmap/ic_et_password"-->

        <Button
            android:textAllCaps="false"
            android:id="@+id/btn_verify"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:text="@string/btn_get_verify_text"
            android:textColor="@android:color/holo_red_light" />
    </LinearLayout>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginTop="16dp"
        android:background="@drawable/shape_username"
        android:drawableLeft="@mipmap/ic_et_password"
        android:drawablePadding="8dp"
        android:hint="@string/et_hint_password"
        android:inputType="textPassword"
        android:lines="1"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:text="@={bindPhoneViewModel.password}"/>

    <Button
        android:id="@+id/bindBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@android:color/holo_orange_light"
        android:text="@string/commit"
        android:textColor="@android:color/white" />

</LinearLayout>
</layout>