<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="TopicLabelShowViewModel"
            type="com.zf.weisport.ui.viewmodel.TopicLabelShowViewModel"/>
    </data>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/et_input_label"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="30dp"
            android:background="@color/colorWhite"
            android:textColorHint = "@color/gray"
            android:textColor="#000000"
            android:paddingLeft="10dp"
            android:hint="@string/topic_lable_add3"
            android:text="@{TopicLabelShowViewModel.labelContent}"
            />
        <TextView
            android:id="@+id/btn_newLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/topic_lable_add2"
            android:textColor="@color/colorGreen"
            android:textSize="15dp"
            android:background="?attr/selectableItemBackground"
            android:gravity="center"/>
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/topic_lable_hot"
        android:textSize="17dp"
        android:padding="10dp"
        android:textColor="@android:color/black"/>
    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layoutManager="LinearLayoutManager"/>
</LinearLayout>
</layout>