<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="forgetPsdViewModel"
            type="com.zf.iweidong.ui.viewmodel.ForgetPsdViewModel"/>
    </data>

    <LinearLayout
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@drawable/shape_username"
            android:drawableLeft="@mipmap/ic_et_username"
            android:drawablePadding="8dp"
            android:hint="@string/et_hint_username"
            android:inputType="phone"
            android:lines="1"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:text="@={forgetPsdViewModel.mobileNumber}"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@drawable/shape_username">

            <EditText
                android:id="@+id/et_input_codes"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:layout_marginTop="-1dp"
                android:layout_weight="1"
                android:background="@null"
                android:drawablePadding="8dp"
                android:hint="@string/et_hint_verify"
                android:inputType="number"
                android:lines="1"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:text="@={forgetPsdViewModel.codes}"/><!--android:drawableLeft="@mipmap/ic_et_password"-->

            <Button
                android:textAllCaps="false"
                android:id="@+id/btn_verify"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:text="@{forgetPsdViewModel.codesCountDown}"
                android:textColor="@android:color/holo_red_light" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_next"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="@android:color/holo_orange_light"
            android:text="@string/btn_next_step_text"
            android:textColor="@android:color/white" />
    </LinearLayout>
</layout>