<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="55dp"
    android:orientation="horizontal"
    android:background="@color/colorWhite"
    >
    <TextView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:textColor="@color/colorBlack"
        android:background="@drawable/frame_bottom_bg_green"
        android:text="@string/ranking_record_tv1"/>
    <TextView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:textColor="@color/colorBlack"
        android:text="@string/ranking_record_tv2"
        android:visibility="invisible"/>
    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="5"
        android:padding="10dp"
        >
        <LinearLayout
            android:layout_toLeftOf="@+id/img_relayoutId"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >
            <TextView
                android:id="@+id/current_rank_value_id"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:textColor="@color/colorGreen"
                android:layout_alignParentRight="true"
                android:layout_gravity="end"
                android:paddingRight="5dp"
                />
            <TextView
                android:layout_below="@+id/current_rank_value_id"
                android:id="@+id/current_rank_value_id_final"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@color/colorBlack"
                android:text="@string/ranking_record_tv3"
                android:layout_alignParentRight="true"
                android:paddingRight="5dp" />
        </LinearLayout>
        <RelativeLayout
            android:id="@+id/img_relayoutId"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            >
            <ImageView
                android:id="@+id/img_rankHead"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_gravity="center_vertical"
                android:scaleType="centerCrop"
                android:src="@mipmap/me_false"/>
        </RelativeLayout>
    </RelativeLayout>
</LinearLayout>